projects/Social Media App/infrastructure/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: social-media-api-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /social/api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: social-media-frontend-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /social/minio(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: minio
                port:
                  number: 9000
          - path: /social/(.+)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-prod
                port:
                  number: 80
          - path: /social/?$
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-prod
                port:
                  number: 80
